# clingo-server

./: API.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  client.py  clingo-dl.h  external_test.lp  part.json  pigeonhole.lp  queens.lp  taskassignment.lp
.github/workflows/: ci-test.yml
clingo-dl-plugin/: Cargo.toml
clingo-dl-plugin/src/: lib.rs
src/: convert.rs  main.rs  solver.rs  test.rs  utils.rs
src/dl_theory/: bindings.rs  mod.rs
