[package]
name = "cl-server"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
clingo = { version = "0.7.0-dev", git = "https://github.com/potassco/clingo-rs", branch = "theory-trait", features = ["dynamic_linking"] }
# clingo = { version = "0.7.0-dev", features = ["dynamic_linking"], git = "https://github.com/potassco/clingo-rs", branch = "consume-ctl" }
rocket = "0.4.5"
thiserror = "1.0"
libloading = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[build-dependencies]
bindgen = "0.54"
