[package]
name = "cl-server"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clingo = { version = "0.7.0-beta.1", git = "https://github.com/potassco/clingo-rs", branch = "st/ast" }
clingo-dl-plugin = { git = "https://github.com/potassco/clingo-dl-theory-rs", branch = "st/wip" }
clingcon-plugin = { git = "https://github.com/potassco/clingcon-theory-rs", branch = "master" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
parking_lot = "0.11"
thiserror = "1.0"
libloading = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


