[package]
name = "cl-server"
version = "0.1.0"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
clingo = "=0.8.0"
clingo-dl-plugin = { git = "https://github.com/potassco/clingo-dl-theory-rs", branch = "master" }
clingcon-plugin = { git = "https://github.com/potassco/clingcon-theory-rs", branch = "master" }

okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"]}
rocket_okapi = { version = "0.7.0-alpha-1"}
schemars = "0.8"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
parking_lot = "0.12"
thiserror = "1.0"
libloading = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
