[package]
name = "clingo-dl-plugin"
version = "0.1.0"
authors = ["Sven Thiele <sthiel78@gmail.com>"]
description = "A clingo theory plugin for difference logic."

[dependencies]
clingo = { version = "0.7.0-beta.1", git = "https://github.com/potassco/clingo-rs", branch = "st/plugin" }
clingo-sys = { git = "https://github.com/potassco/clingo-sys", branch="st/wip" }
clingo-dl-sys = { git = "https://github.com/potassco/clingo-dl-sys", branch="main"}

[lib]
crate-type = ["cdylib", "rlib"] 
